Disable music CSIT
 - this PoC is no longer needed as ccsdk/distribution now serves
   as an example project in active use

Issue-ID: INT-1769
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Ie86015b2a07837e1b020b1ea465012631b6fb451

--- a/jjb/music/music-distributed-kv-store-csit.yaml
+++ b/jjb/music/music-distributed-kv-store-csit.yaml
@@ -7,6 +7,7 @@
       - '{project-name}-merge-verification-{stream}'
     project-name: 'music-distributed-kv-store'
     project: 'music/distributed-kv-store'
+    disabled: true
     stream: 'master'
     artifact-type: 'golang'
     java-version: openjdk11
