--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-distribution
     project-name: 'ccsdk-distribution'
     jobs:
-      - gerrit-maven-verify
+      - gerrit-maven-verify:
+          mvn-params: '-Ddocker.skip.push=true -P docker'
       - gerrit-maven-merge:
           cron: '@daily'
       - gerrit-maven-stage:
@@ -24,7 +25,7 @@
           build-node: ubuntu1804-docker-8c-8g
           container-public-registry: 'nexus3.onap.org:10001'
           container-snapshot-registry: 'nexus3.onap.org:10003'
-          mvn-params: '-Dmaven.test.skip=true -P docker'
+          mvn-params: '-Dmaven.test.skip=true -Ddocker.skip.push=true -P docker'
           maven-versions-plugin: true
       - '{project-name}-{stream}-docker-staging':
           script:
