Adding docker profile to verify job
mvn-params: '-Ddocker.skip.push=true -P docker'

Issue-ID: CIMAN-396
Signed-off-by: Singal, Kapil (ks220y) <ks220y@att.com>
Change-Id: If67cf160018df664fa0dde79367ea00614797c35

--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-distribution
     project-name: 'ccsdk-distribution'
     jobs:
-      - gerrit-maven-verify
+      - gerrit-maven-verify:
+          mvn-params: '-Ddocker.skip.push=true -P docker'
       - gerrit-maven-merge:
           cron: '@daily'
       - gerrit-maven-stage:
