--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -3,8 +3,7 @@
     name: ccsdk-distribution
     project-name: 'ccsdk-distribution'
     jobs:
-      - gerrit-maven-verify:
-          mvn-params: '-Ddocker.skip.push=true -P docker'
+      - gerrit-maven-verify
       - gerrit-maven-merge:
           cron: '@daily'
       - gerrit-maven-stage:
