Update push url in vnfsdk upload docs job.
Signed-off-by: Bartosz Gardziejewski <bartosz.gardziejewski@nokia.com>
Change-Id: Ib1cfdb35a45015f0b391496cc2bd29ce966aa7d3
Issue-ID: VNFSDK-696

--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -76,5 +76,5 @@
       jobs:
           - '{project-name}-{stream}-build-and-upload':
                 pre_script: !include-raw-escape: ./generate-dosc.sh
-                project_id: org.onap.vnfsdk.refrepo
+                project_id: org.onap.vnfsdk.validation
                 post_script: !include-raw-escape: ./upload-artifact.sh
