user image with docker for CLM
Issue-ID: CPS-166
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: If2e9d379d1968c8d5b9fa736e9d02207c6217a4f

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -25,7 +25,7 @@
       project-name: 'cps'
       branch: 'master'
       mvn-settings: 'cps-settings'
-      build-node: ubuntu1804-builder-4c-4g
+      build-node: centos7-docker-8c-8g
 
 - project:
     name: cps
