Use lf-infra-wrappers merge-java
The merge-java job is using an unupdated
wrapper macro which does not add the npmrc into
the build environment. Update to the one in
global-jjb.

Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I23f9e7e8370f354d5048ef60bbf8a298f73e6052

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -325,8 +325,9 @@
           submodule-recursive: '{submodule-recursive}'
 
     wrappers:
-      - infra-wrappers:
+      - lf-infra-wrappers:
           build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     triggers:
       - gerrit-trigger-patch-merged:
