--- a/jjb/policy/policy-clamp.yaml
+++ b/jjb/policy/policy-clamp.yaml
@@ -4,9 +4,10 @@
     project-name: 'policy-clamp'
     jobs:
       - gerrit-maven-stage:
-          build-node: ubuntu1804-docker-8c-16g
+          build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
           sign-artifacts: true
+          mvn-params: '-Dmaven.test.skip=true'
       - gerrit-maven-docker-stage:
           build-node: ubuntu1804-docker-8c-8g
           maven-versions-plugin: true
@@ -17,7 +18,8 @@
           mvn-params: '-P docker'
           build-node: ubuntu1804-docker-8c-16g
       - '{project-name}-{stream}-merge-java':
-         mvn-params: '-P docker'
+          build-node: ubuntu1804-docker-8c-16g
+          mvn-params: '-P docker'
       - '{project-name}-gerrit-release-jobs':
           build-node: centos7-docker-8c-8g
 
