Deprecate infra-shiplogs macro
We should be using lf-infra-publish as a
publisher macro. This global-jjb macro performs a
job-cost run that we need to report for all jobs.

Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: Iff43723322ac7eb92f1e9e93e49dfe9595af6450

--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -82,8 +82,7 @@
           mv  docs/_build/html "$WORKSPACE/archives/"
 
     publishers:
-      - infra-shiplogs:
-          maven-version: '{maven-version}'
+      - lf-infra-publish
 
 - job-template:
     # Job template for merging/publishing Sphinx/Restructured Text at RTD
@@ -160,6 +159,4 @@
       - shell: !include-raw: doc-post-rtd.sh
 
     publishers:
-      - infra-shiplogs:
-          maven-version: '{maven-version}'
-
+      - lf-infra-publish
