Remove pattern from PH job
Change-Id: I6d46457e5e98ec97875f7044a7e6368cd858a266
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2586

--- a/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
@@ -15,7 +15,7 @@
     mvn-settings: 'dcaegen2-platform-policy-handler-settings'
     subproject:
       - 'policy-handler':
-          pattern: 'policyhandler/**'
+          pattern: '**'
           path: 'policyhandler'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
