--- a/jjb/ccsdk/ccsdk-oran.yaml
+++ b/jjb/ccsdk/ccsdk-oran.yaml
@@ -52,6 +52,7 @@
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-oran-settings'
+    mvn-opts: '-Ddocker.skip=true'
     build-node: ubuntu1804-builder-4c-4g
 
 - project:
