new project-csit for policy
apply to new template for project-specific
csit structure

Change-Id: I564f5ba53e437bb7a65f2a645b351edb8104b97c
Issue-ID: POLICY-2895
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -1,4 +1,23 @@
 - project:
+    name: policy-api-project-csit
+    jobs:
+      - '{project-name}-{stream}-project-csit-{functionality}'
+    project-name: 'policy-api'
+    recipients: 'takamune.cho@att.com'
+    project: 'policy/docker'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
+      - 'frankfurt':
+          branch: 'frankfurt'
+    functionality:
+      - 'api'
+    trigger_jobs:
+      - 'policy-api-{stream}-merge-java'
+
+- project:
     name: policy-apex-pdp-csit
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
@@ -38,26 +57,6 @@
       - 'distribution'
     trigger_jobs:
       - 'policy-distribution-{stream}-merge-java'
-    robot-options: ''
-
-- project:
-    name: policy-api-csit
-    jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'policy'
-    java-version: openjdk11
-    stream:
-      - 'master':
-          branch: master
-      - 'frankfurt':
-          branch: frankfurt
-      - 'guilin':
-          branch: guilin
-    functionality:
-      - 'api'
-    trigger_jobs:
-      - 'policy-api-{stream}-merge-java'
     robot-options: ''
 
 - project:
