new project-csit for policy
apply to new template for project-specific
csit structure

Change-Id: I564f5ba53e437bb7a65f2a645b351edb8104b97c
Issue-ID: POLICY-2895
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -173,6 +173,11 @@
           build-timeout: '{build-timeout}'
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
+    triggers:
+      - timed: '@daily'
+      - reverse:
+          jobs: '{obj:trigger_jobs}'
+
     builders:
       - lf-infra-pre-build
       - lf-update-java-alternatives:
