Add unified merge verification maven template
 - add new template that combines maven artifact and docker builds
   and CSIT execution triggered by merge
 - take the template in use in CCSDK distribution CSIT
 - remove old merge verification and project-csit jobs from CCSDK
Issue-ID: INT-1833

Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Ic51c59b8e45b030003c6c26595f24872f70a33a7

--- a/jjb/ccsdk/ccsdk-csit.yaml
+++ b/jjb/ccsdk/ccsdk-csit.yaml
@@ -2,9 +2,13 @@
 - project:
     name: ccsdk-distribution-csit
     jobs:
-      - '{project-name}-{stream}-project-csit'
-      - '{project-name}-merge-verification-{stream}'
       - '{project-name}-review-verification-maven-{stream}':
+          build-node: ubuntu1804-docker-8c-8g
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-snapshot-registry: 'nexus3.onap.org:10003'
+          mvn-params: '-Dmaven.test.skip=true -Ddocker.skip.push=true -P docker'
+          maven-versions-plugin: true
+      - '{project-name}-merge-verification-maven-{stream}':
           build-node: ubuntu1804-docker-8c-8g
           container-public-registry: 'nexus3.onap.org:10001'
           container-snapshot-registry: 'nexus3.onap.org:10003'
@@ -18,7 +22,6 @@
     stream:
       - 'master':
           branch: 'master'
-    artifact-type: 'maven'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-distribution-settings'
