--- a/packer/provision/local-builder.yaml
+++ b/packer/provision/local-builder.yaml
@@ -61,6 +61,15 @@
       become: true
       when: ansible_distribution == 'Ubuntu'
 
+    - name: Install Python 3.9
+      apt:
+        name:
+          - python3.9
+          - python3.9-dev
+          - python3.9-tk
+      become: true
+      when: ansible_distribution == 'Ubuntu'
+
     - name: Install libssl1.0-dev dep
       apt:
         name: libssl1.0-dev
