Remove obsolete verification templates
 - remove obsolete review and merge verification templates
 - comment out music CSIT job definition that was using those
   templates (new templates for golang are needed if music CSIT
   need to be supported in the future)

Issue-ID: INT-1823, INT-1833
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Ic0fffa1e8edf5bf2d90f9d53fbe946d0f37560ca

--- a/jjb/music/music-distributed-kv-store-csit.yaml
+++ b/jjb/music/music-distributed-kv-store-csit.yaml
@@ -1,18 +1,25 @@
----
-- project:
-    name: music-distributed-kv-store-csit
-    jobs:
-      - '{project-name}-{stream}-project-csit'
-      - '{project-name}-review-verification-{stream}'
-      - '{project-name}-merge-verification-{stream}'
-    project-name: 'music-distributed-kv-store'
-    project: 'music/distributed-kv-store'
-    disabled: true
-    stream: 'master'
-    artifact-type: 'golang'
-    java-version: openjdk11
-    mvn-version: 'mvn36'
-    mvn-settings: 'music-distributed-kv-store-settings'
-    mvn-global-settings: global-settings
-    robot-options: ''
-    branch: 'master'
+# Integration templates no longer support these 
+# job definitions; if Music CSIT needs to be restored,
+# '{project-name}-review-verification-golang-{stream}'
+# '{project-name}-merge-verification-golag-{stream}'
+# would have to be added to integration templates and 
+# applied here
+#  
+#---
+#- project:
+#    name: music-distributed-kv-store-csit
+#    jobs:
+#      - '{project-name}-{stream}-project-csit'
+#      - '{project-name}-review-verification-{stream}'
+#      - '{project-name}-merge-verification-{stream}'
+#    project-name: 'music-distributed-kv-store'
+#    project: 'music/distributed-kv-store'
+#    disabled: true
+#    stream: 'master'
+#    artifact-type: 'golang'
+#    java-version: openjdk11
+#    mvn-version: 'mvn36'
+#    mvn-settings: 'music-distributed-kv-store-settings'
+#    mvn-global-settings: global-settings
+#    robot-options: ''
+#    branch: 'master'
