Add cps to WhiteSource scans
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: Id0ee8998d975fa674d6b320c1982e066c936f5c5

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -77,3 +77,17 @@
     mvn-settings: 'cps-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: cps-whitesource
+    project-name: cps
+    jobs:
+      - gerrit-whitesource-scan
+    java-version: openjdk11
+    mvn-version: 'mvn36'
+    mvn-settings: 'cps-settings'
+    wss-product-name: cps
+    mvn-clean-install: true
+    project: cps
+    branch: master
+
