Activate integration tests
- We need to add integration tests at verification job level to resolve potential job failures in the future.

Issue-ID: INT-1844
Signed-off-by: Zebek Bogumil <bogumil.zebek@nokia.com>
Change-Id: Ic6e176dcb0b8e277166ffe7c183712ce2a19a72f

--- a/jjb/integration/simulators/integration-pnf-simulator.yaml
+++ b/jjb/integration/simulators/integration-pnf-simulator.yaml
@@ -15,7 +15,7 @@
       build-node: ubuntu1804-docker-8c-8g
       jobs:
           - '{project-name}-{stream}-verify-java':
-                mvn-goals: 'clean install'
+                mvn-goals: 'clean install -P docker,integration -DskipNexusStagingDeployMojo=true -DskipDockerPush=true'
           - '{project-name}-{stream}-merge-java':
                 mvn-goals: 'clean deploy'
           -  '{project-name}-gerrit-release-jobs':
