--- a/jjb/aai/aai-oom.yaml
+++ b/jjb/aai/aai-oom.yaml
@@ -19,8 +19,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
 
     mvn-settings: 'aai-oom-settings'
     files: '**'
