--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -36,7 +36,9 @@
     project: 'cps'
     jobs:
       - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-merge-java':
+          docker-pom: 'pom.xml'
+          mvn-params: "-P docker"
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
