Generate dockers images on each merge
Issue-ID: CPS-175
Signed-off-by: Claudio D. Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: I081e615407623f2f490994b31aa2acc561a31b66

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -37,6 +37,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+          mvn-params: '-P cps-docker,xnf-docker,cps-xnf-docker'
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
@@ -44,7 +45,7 @@
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
-          mvn-params: '-P docker'
+          mvn-params: '-DskipTests=true -P cps-docker,xnf-docker,cps-xnf-docker'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
