Limit CSIT trigger file pattern to first dir level
 - project-name should be applied to filter directory names only
   under first directory depth level in CSIT trigger file pattern
   to avoid running unnecessary and unrelated verification jobs
Issue-ID: INT-1848
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I003e318890f1bccde20e2bd1d4593e47f5f07f1e

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -42,7 +42,7 @@
           server: '{server-name}'
           project: 'integration/csit'
           branch: '{branch}'
-          files: '**/{project-name}/**'
+          files: '*/{project-name}/**'
 
     builders:
       - lf-update-java-alternatives:
@@ -105,7 +105,7 @@
           server: '{server-name}'
           project: 'integration/csit'
           branch: '{branch}'
-          files: '**/{project-name}/**'
+          files: '*/{project-name}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
