--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -1,26 +1,37 @@
 ---
 - project:
-    name: sdc-csit
-    jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'sdc'
-    disabled: true
-    recipients: 'ofir.sonsino@intl.att.com'
-    stream:
-      - 'master':
-          branch: 'master'
-    functionality:
-      - 'sanity':
-          trigger_jobs:
-      - 'nightly':
-          trigger_jobs:
-      - 'uiSanity':
-          trigger_jobs:
-    robot-options: ''
-    branch: 'master'
-    html-dir: 'archives'
-    html-files: 'SDC_CI_Extent_Report.html'
+      name: sdc-csit
+      jobs:
+          - '{project-name}-review-verification-maven-{stream}':
+                build-node: ubuntu1804-docker-8c-16g
+                container-public-registry: 'nexus3.onap.org:10001'
+                container-snapshot-registry: 'nexus3.onap.org:10003'
+                mvn-goals: clean install
+                mvn-params: '-Dnpm.registry=https://nexus3.onap.org/repository/npm.public/ -Ddocker.skip.push=true -P docker, all-for-integration-tests-only'
+                maven-versions-plugin: true
+          - '{project-name}-merge-verification-maven-{stream}':
+                build-node: ubuntu1804-docker-8c-16g
+                container-public-registry: 'nexus3.onap.org:10001'
+                container-snapshot-registry: 'nexus3.onap.org:10003'
+                mvn-goals: clean install
+                mvn-params: '-Dnpm.registry=https://nexus3.onap.org/repository/npm.public/ -Ddocker.skip.push=true -P docker, all-for-integration-tests-only'
+                maven-versions-plugin: true
+
+      project-name: 'sdc'
+      recipients: 'christophe.closset@intl.att.com'
+      # project name in gerrit
+      project: 'sdc'
+      stream:
+          - 'master':
+                branch: 'master'
+          - 'guilin':
+                branch: 'guilin'
+      java-version: openjdk11
+      mvn-version: 'mvn36'
+      mvn-settings: 'sdc-settings'
+      mvn-global-settings: global-settings
+      robot-options: ''
+      branch: 'master'
 
 #- project:
 #    name: sdc-csit-arm64
