--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -91,7 +91,7 @@
       - 'master':
           branch: 'master'
           distro: 'alpine'
-          mvn-params: '-P spring-boot-2-1'
+          mvn-params: '-P spring-boot-2-1,docker'
     docker_name: 'onap/aai-common-{distro}'
     docker_build_args: '-f ./Dockerfile.{distro}'
     docker_root: '$WORKSPACE/Dockerfiles/aai-common/'
