[OOM] Use different helm3 binaries
OOM branches supports different versions of Helm 3. In order to check
them with the right one, let's give a variable in order to pick it.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I8d297167b5f4bfbdedccf10aaf85e4299e4f2deb

--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -73,6 +73,8 @@
 
     builders:
       - lf-infra-pre-build
+      - inject:
+          properties-content: 'HELM_BIN={HELM_BIN}'
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
 
