Add Terragrunt validator for integration/terragrunt project
Change-Id: I321c0039c1de036de82bff42c6974678c44e716d
Issue-ID: INT-1713
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/integration-terragrunt.yaml
+++ b/jjb/integration/integration-terragrunt.yaml
@@ -44,3 +44,18 @@
     stream:
       - 'master':
           branch: 'master'
+
+- project:
+    name: integration-terragrunt-validate
+    project: integration/terragrunt
+    project-name: integration-terragrunt
+    jobs:
+      - integration-terraform-verify
+    subproject:
+      - 'terragrunt':
+          tox-dir: '.'
+          tox-envs: 'terragrunt'
+          pattern: '**'
+    stream:
+      - 'master':
+          branch: 'master'
